# brusselator

./: .gitignore  README.md
visualizer/: CMakeLists.txt  build.sh  run.sh
visualizer/attempts/: big_wave.ppb  brusselator_1_3.ppb  brusselator_1_3_additional_wind.ppb  brusselator_1_3_angular_speed.ppb  brusselator_1_3_angular_speed_2.ppb  brusselator_1_3_divergency.ppb  brusselator_1_3_equal_speed.ppb  brusselator_1_3_exp_approach.ppb  brusselator_1_3_exp_approach_2.ppb  brusselator_1_3_interpolation.ppb  brusselator_1_3_nongradient_field.ppb  brusselator_1_3_perpendicular_field.ppb  brusselator_1_3_perpendicular_integral.ppb  brusselator_1_3_zero_y.ppb  example_1.ppb  example_2.ppb
visualizer/compilation_on_windows/: build_fltk.sh  build_matheval.sh  build_this.sh
visualizer/compilation_on_windows/auxiliary/: cmakelists_matheval.txt  cmakelists_this.txt  set_fltk_dir.sh  set_matheval_dir.sh  set_root_dir.sh
visualizer/sources/: main.cpp
visualizer/sources/formula/: formula_xy.cpp  formula_xy.h  matrix_22.cpp  matrix_22.h
visualizer/sources/geometry/: basics.cpp  basics.h  circle.cpp  circle.h  frame.cpp  frame.h  vector_field.cpp  vector_field.h
visualizer/sources/image_processing/: image_direction.cpp  image_direction.h  image_loader.cpp  image_loader.h  image_portrait.cpp  image_portrait.h
visualizer/sources/plotter/: plotter.cpp  plotter.h
visualizer/sources/tracker/: neighbours_base.cpp  neighbours_base.h  tracker.cpp  tracker.h  visual_preparator.cpp  visual_preparator.h
visualizer/sources/viewer/: application.cpp  application.h  carousel.cpp  carousel.h  color_input.cpp  color_input.h  text_input.cpp  text_input.h  viewer_window.cpp  viewer_window.h
